fix: custom native scrollbar on light theme is using the dark theme

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@
 		scrollbar-width: thin;
 	}
 	html.dark,
-	.custom-scrollbar {
+	html.dark .custom-scrollbar {
 		scrollbar-color: #8a99ae #313c50;
 		scrollbar-width: thin;
 	}
